# Studybuddy-Agent

./: .env  README.md  pyproject.toml
src/studybuddy/: agent_study.py
